--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@havesource/create-cordova-plugin",
-  "version": "1.0.0",
+  "version": "1.0.1-dev.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
