--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@havesource/create-cordova-plugin",
   "version": "1.0.1-dev.0",
+  "description": "Quickly create Cordova plugin starter structure.",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
+  "repository": "github:havesource/create-cordova-plugin",
+  "bugs": "https://github.com/havesource/create-cordova-plugin/issues",
   "keywords": [
     "ecosystem:cordova",
     "plugin",
@@ -14,7 +17,6 @@
   ],
   "author": "Erisu",
   "license": "Apache-2.0",
-  "description": "Quickly create Cordova plugin starter structure.",
   "bin": {
     "create-cordova-plugin": "./index.js"
   },
