chore: update license headers, author, & added license checker

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "plugin",
     "template"
   ],
-  "author": "Erisu",
+  "author": "HaveSource",
   "license": "Apache-2.0",
   "bin": {
     "create-cordova-plugin": "./index.js"
