--- a/licence_checker.yml
+++ b/licence_checker.yml
@@ -12,5 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-root: true
-extends: '@cordova/eslint-config/node'
+ignored-packages:
+  - spdx-exceptions@2.5.0
